force-app/main/default/objects/Training_Plan_Section_Item__c/Training_Plan_Section_Item__c.object-meta.xml
<CustomObject>
    <label>Training Plan Section Item</label>
    <nameField>
        <displayFormat>TPSI-{0000000}</displayFormat>
        <label>Training Plan Section Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Section Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>